third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_global_bad1.exp

Diagnostics:
error: cannot mutably borrow `A::T` since it is already borrowed
  ┌─ tests/reference-safety/v1-borrow-tests/borrow_global_bad1.move:8:17
  │
7 │         let x = borrow_global_mut<T>(sender);
  │                 ---------------------------- struct `A::T` previously mutably borrowed here
8 │         let y = borrow_global_mut<T>(addr);
  │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow attempted here
9 │         x;
  │         - conflicting reference `x` used here
